--- a/coffetoffe/pubspec.yaml
+++ b/coffetoffe/pubspec.yaml
@@ -19,8 +19,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
   carousel_pro: ^1.0.0
+  firebase_auth: ^0.15.0+1
+  cloud_firestore: ^0.12.10+2
+  google_sign_in: ^4.0.14
+  shared_preferences: ^0.5.4+6
+  fluttertoast: ^3.1.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
