--- a/coffetoffe/pubspec.yaml
+++ b/coffetoffe/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -25,6 +25,7 @@ dependencies:
   google_sign_in: ^4.0.14
   shared_preferences: ^0.5.4+6
   fluttertoast: ^3.1.3
+  firebase_database: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,20 +54,6 @@ flutter:
 
   assets:
     - images/
-    # - images/app_base/welcome.png
-    # - images/carousel/car_bakery.jpg
-    # - images/carousel/car_blended.jpg
-    # - images/carousel/car_brewed.jpg
-    # - images/carousel/car_espresso.jpg
-    # - images/carousel/car_sandwich.jpg
-    # - images/categories/cat_cake.png
-    # - images/categories/cat_cstraw.png
-    # - images/categories/cat_cup.png
-    # - images/categories/cat_espresso.png
-    # - images/categories/cat_sandwich.png
-    # - images/products/prod_cake.png
-    # - images/products/prod_cup.png
-    # - images/products/prod_sandwich.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
